@@ -1093,7 +1093,7 @@ int key_confirm_quit(object *op, char key)
     /* Lauwenmark : Here we handle the REMOVE global event */
     execute_global_event(EVENT_REMOVE, op);
     terminate_all_pets(op);
-    leave_map(op);
+    remove_ob(op);
     op->direction=0;
     draw_ext_info_format(NDI_UNIQUE | NDI_ALL, 5, NULL,
 			 MSG_TYPE_ADMIN, MSG_TYPE_ADMIN_PLAYER,
